Crash on undo: Unlinking Scene Collection from Object Properties panel #126549

Closed
opened 2024-08-20 14:28:52 +02:00 by Albert-OShea · 4 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.99

Blender Version
Broken: version: 4.2.1 LTS, branch: blender-v4.2-release, commit date: 2024-08-19 11:21, hash: 396f546c9d82
Worked: 4.1

Short description of error
Blender can crash when undoing an attempt at unlinking the Scene Collection through object properties (shouldn't this be impossible in the first place?)

Exact steps for others to reproduce the error

In provided blend file, go to the Object Properties of the Cube.

Go to the Collections panel. Click the dropdown next to Scene Collection, then click Unlink Collection.

Screenshot 2024-08-20 222219.png

Once the Cube is gone, undo that step. Sometimes Blender will immediately crash upon doing this once, sometimes it takes a few repeats before it crashes.

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.99 **Blender Version** Broken: version: 4.2.1 LTS, branch: blender-v4.2-release, commit date: 2024-08-19 11:21, hash: `396f546c9d82` Worked: 4.1 **Short description of error** Blender can crash when undoing an attempt at unlinking the Scene Collection through object properties (shouldn't this be impossible in the first place?) **Exact steps for others to reproduce the error** In provided blend file, go to the Object Properties of the Cube. Go to the Collections panel. Click the dropdown next to `Scene Collection`, then click Unlink Collection. ![Screenshot 2024-08-20 222219.png](/attachments/e7710470-17f5-4461-95d6-be51ca0ff70e) Once the Cube is gone, undo that step. Sometimes Blender will immediately crash upon doing this once, sometimes it takes a few repeats before it crashes.
Albert-OShea added the
Severity
Normal
Type
Bug
Status
Needs Triage
labels 2024-08-20 14:28:53 +02:00
Member

Hi, thanks for the report. Can confirm the crash (works perfect in 4.1)

Hi, thanks for the report. Can confirm the crash (works perfect in 4.1)
Pratik Borhade added
Module
Core
Severity
High
Status
Confirmed
and removed
Severity
Normal
Status
Needs Triage
labels 2024-08-21 05:29:03 +02:00
Member

Tracking down the exact commit is bit hard since crash is bit intermittent (sometimes crashes on operator execution, on undo, reopening the file, etc.)

Tracking down the exact commit is bit hard since crash is bit intermittent (sometimes crashes on operator execution, on undo, reopening the file, etc.)
Member

Looks like scene collection id is freed id_free(bmain, id, free_flag, false); in id_delete().
AFAICS, this was not the case in 4.1 (object was present in scene after operator execution)
I suspect crash introduced with f2e481a519
@mont29 ^

Looks like scene collection id is freed `id_free(bmain, id, free_flag, false);` in `id_delete()`. AFAICS, this was not the case in 4.1 (object was present in scene after operator execution) I suspect crash introduced with f2e481a5197b128fa89c3bf5ae2eb7f77037c3d9 @mont29 ^

This has nothing to do with f2e481a519 I believe, and i do not know how this could have worked in 4.1 or ever. Issue here is this 'unlink collection' operator allowing to unlink a Scene main collection, which is totally forbidden and unsupported.

I suspect that previously low-level delete ID code would fail to delete that main collection, while new code is rightfully not doing such a check (this should be the responsibility of calling code).

Fix incoming.

This has nothing to do with f2e481a519 I believe, and i do not know how this could have worked in 4.1 or ever. Issue here is this 'unlink collection' operator allowing to unlink a Scene main collection, which is totally forbidden and unsupported. I suspect that previously low-level delete ID code would fail to delete that main collection, while new code is rightfully not doing such a check (this should be the responsibility of calling code). Fix incoming.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-08-21 11:48:22 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#126549
No description provided.